--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- header -->
 
   <header>
-    <img class="logo" src="/aiid-digital-studio/IMG/LOGO.svg" alt="logo">
+    <img class="logo" src="/IMG/LOGO.svg" alt="logo">
     <nav>
         <ul class="nav__links">
           <li><a href="#">Blog</a></li>
